<resources>
    <string name="app_name">Tip App</string>

    <string-array name="spinner">
        <item>5%</item>
        <item>6%</item>
        <item>7%</item>
        <item>8%</item>
        <item>9%</item>
        <item>10%</item>
        <item>11%</item>
        <item>12%</item>
        <item>13%</item>
        <item>14%</item>
        <item>15%</item>
        <item>16%</item>
        <item>17%</item>
        <item>18%</item>
        <item>19%</item>
        <item>20%</item>
    </string-array>

    <string-array name="spinner2">
        <item>5%</item>
        <item>6%</item>
        <item>7%</item>
        <item>8%</item>
        <item>9%</item>
        <item>10%</item>
        <item>11%</item>
        <item>12%</item>
        <item>13%</item>
        <item>14%</item>
        <item>15%</item>
        <item>16%</item>
        <item>17%</item>
        <item>18%</item>
        <item>19%</item>
        <item>20%</item>
    </string-array>

    <string name="textView_price">Enter a price: </string>
    <string name="togglebutton_taxes2">ACTIVATED</string>
    <string name="togglebutton_taxes">DEACTIVATED</string>

    <string name="textView_people">Number of people: </string>

    <string name="button_submit">Submit</string>
    <string name="button_submit">Submit</string>

</resources>